# eo9

./: .gitignore  Cargo.toml  GAPS.md  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  STATUS.md  rust-toolchain.toml  rustfmt.toml
crates/eo9/: Cargo.toml  build.rs
crates/eo9-component/: Cargo.toml
crates/eo9-component/src/: component.rs  compose.rs  configure.rs  describe.rs  error.rs  externs.rs  lib.rs  rename.rs  restrict.rs  semver.rs  slots.rs  synth.rs  wiring.rs
crates/eo9-component/tests/: algebra.rs
crates/eo9-components/: Cargo.toml
crates/eo9-components/data/: eo9-coreutil-cat.wasm  eo9-coreutil-cp.wasm  eo9-coreutil-echo.wasm  eo9-coreutil-find.wasm  eo9-coreutil-head.wasm  eo9-coreutil-ls.wasm  eo9-coreutil-mkdir.wasm  eo9-coreutil-rm.wasm  eo9-coreutil-rng.wasm  eo9-coreutil-stat.wasm  eo9-coreutil-touch.wasm  eo9-coreutil-wc.wasm  eo9-example-cruncher.wasm  eo9-example-hello.wasm  eo9-example-l2check.wasm  eo9-example-l4check.wasm  eo9-example-lspci.wasm  eo9-example-outcomes.wasm  eo9-example-readwrite.wasm  eo9-example-sockcheck.wasm  eo9-stub-disk-mem.wasm  eo9-stub-disk-none.wasm  eo9-stub-disk-virtio.wasm  eo9-stub-entropy-none.wasm  eo9-stub-entropy-seeded.wasm  eo9-stub-fs-eofs.wasm  eo9-stub-fs-memfs.wasm  eo9-stub-fs-none.wasm  eo9-stub-fs-overlay.wasm  eo9-stub-fs-readonly.wasm  eo9-stub-net-deny.wasm  eo9-stub-net-l2-deny.wasm  eo9-stub-net-l2-none.wasm  eo9-stub-net-l3-deny.wasm  eo9-stub-net-l3-none.wasm  eo9-stub-net-l4-deny.wasm  eo9-stub-net-l4-loopback.wasm  eo9-stub-net-l4-none.wasm  eo9-stub-net-l4-over-l2.wasm  eo9-stub-net-none.wasm  (+13 more)
crates/eo9-components/src/: lib.rs
crates/eo9-embed/: Cargo.toml
crates/eo9-embed/examples/: embed_hello.rs
crates/eo9-embed/src/: host.rs  lib.rs  sandbox.rs
crates/eo9-embed/tests/: run.rs
crates/eo9-providers-unix/: Cargo.toml
crates/eo9-providers-unix/src/: buffer.rs  completion.rs  disk.rs  entropy.rs  fs.rs  lib.rs  pool.rs  testutil.rs  text.rs  time.rs
crates/eo9-runtime/: Cargo.toml
crates/eo9-runtime/src/: engine.rs  exec.rs  image.rs  lib.rs  link.rs  outcome.rs  providers.rs  task.rs  trap.rs  wave.rs
crates/eo9-runtime/tests/: exec_api.rs  fs_api.rs  hardening.rs  hello.rs  image_cache.rs  readwrite.rs  spike_cm_async.rs  task_api.rs
crates/eo9-sched/: Cargo.toml
crates/eo9-sched/src/: completion.rs  fuel.rs  lib.rs  platform.rs  policy.rs  sched.rs
crates/eo9-sched/tests/: determinism.rs  fuel_conservation.rs
crates/eo9/src/: cli.rs  compile.rs  complete.rs  describe.rs  editor.rs  interactive.rs  main.rs  mkfs.rs  providers.rs  run.rs  seed.rs  shell.rs  source.rs  storecmd.rs
crates/eo9/tests/: cli.rs
crates/eofs-core/: Cargo.toml  FORMAT.md
crates/eofs-core/src/: device.rs  error.rs  format.rs  fs.rs  lib.rs  space.rs  tree.rs
crates/eofs-core/tests/: compression.rs  corruption.rs  crash.rs  hostile.rs  model.rs  roundtrip.rs  snapshots.rs
guest/: Cargo.toml  rust-toolchain.toml
guest/.cargo/: config.toml
guest/coreutils/cat/: Cargo.toml
guest/coreutils/cp/: Cargo.toml
guest/coreutils/echo/: Cargo.toml
guest/coreutils/find/: Cargo.toml
guest/coreutils/head/: Cargo.toml
guest/coreutils/ls/: Cargo.toml
guest/coreutils/mkdir/: Cargo.toml
guest/coreutils/rm/: Cargo.toml
guest/coreutils/rng/: Cargo.toml
guest/coreutils/stat/: Cargo.toml
guest/coreutils/touch/: Cargo.toml
guest/coreutils/wc/: Cargo.toml
guest/eo9-guest/: Cargo.toml
guest/eo9-guest-placeholder/: Cargo.toml
guest/eo9-guest-placeholder/src/: lib.rs
guest/eo9-guest-placeholder/wit/: world.wit
guest/eo9-guest/src/: api.rs  buffer.rs  entropy.rs  lib.rs  macros.rs  provider.rs  rt.rs  text.rs  time.rs
guest/eo9-guest/wit/: world.wit
guest/eosh/eosh/: Cargo.toml
guest/eosh/eosh-core/: Cargo.toml
guest/examples/cruncher/: Cargo.toml
guest/examples/hello/: Cargo.toml
guest/examples/l2check/: Cargo.toml
guest/examples/l4check/: Cargo.toml
guest/examples/lspci/: Cargo.toml
guest/examples/outcomes/: Cargo.toml
guest/examples/readwrite/: Cargo.toml
guest/examples/sockcheck/: Cargo.toml
guest/stubs/disk-mem/: Cargo.toml
guest/stubs/disk-none/: Cargo.toml
guest/stubs/disk-virtio/: Cargo.toml
guest/stubs/entropy-none/: Cargo.toml
guest/stubs/entropy-seeded/: Cargo.toml
guest/stubs/fs-eofs/: Cargo.toml
guest/stubs/fs-memfs/: Cargo.toml
guest/stubs/fs-none/: Cargo.toml
guest/stubs/fs-overlay/: Cargo.toml
guest/stubs/fs-readonly/: Cargo.toml
guest/stubs/net-deny/: Cargo.toml
guest/stubs/net-l2-deny/: Cargo.toml
guest/stubs/net-l2-none/: Cargo.toml
guest/stubs/net-l3-deny/: Cargo.toml
guest/stubs/net-l3-none/: Cargo.toml
guest/stubs/net-l4-deny/: Cargo.toml
guest/stubs/net-l4-loopback/: Cargo.toml
guest/stubs/net-l4-none/: Cargo.toml
guest/stubs/net-l4-over-l2/: Cargo.toml
guest/stubs/net-none/: Cargo.toml
guest/stubs/net-virtio/: Cargo.toml
guest/stubs/pci-filtered/: Cargo.toml
guest/stubs/pci-none/: Cargo.toml
guest/stubs/perf-none/: Cargo.toml
guest/stubs/perf-null/: Cargo.toml
guest/stubs/text-none/: Cargo.toml
guest/stubs/text-null/: Cargo.toml
guest/stubs/time-frozen/: Cargo.toml
guest/stubs/time-fuzzy/: Cargo.toml
guest/stubs/time-monotonic-stub/: Cargo.toml
guest/stubs/time-none/: Cargo.toml
kernel/: Cargo.toml  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/eo9-kernel/: Cargo.toml  build.rs  linker-riscv64.ld  linker-x86_64.ld  linker.ld
kernel/eo9-kernel-placeholder/: Cargo.toml
kernel/seed/: hello.wat  sleepy.wat
tests/eo9-integration/: Cargo.toml
www/: .gitignore  Cargo.toml  README.md
www/embed-spike/: Cargo.toml  README.md
www/precompress/: .gitignore  Cargo.toml
www/site/: index.html  index.html.br  style.css  style.css.br
www/site/try/: host.js  (+7 more)
www/src/: compile.rs  lib.rs  main.rs  server.rs  tls.rs
www/tests/: https.rs  limits.rs  server.rs  vm_compile.rs
www/try-build/: .gitignore  Cargo.toml
www/web-eo9/: .gitignore  Cargo.toml  verify-coreutils.mjs  verify-eosh.mjs  verify-exec.mjs  verify-fs.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
(+499 files in other folders)
