# Host-side workspace: everything that runs on the host OS (crates/*) plus the xtask
# build orchestrator. The guest/ and kernel/ directories are separate workspaces with
# their own Cargo.toml, toolchain file, and target configuration.
[workspace]
resolver = "3"
members = ["crates/*", "tests/eo9-integration", "xtask"]
exclude = ["guest", "kernel"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Crates that are published to crates.io opt in with an explicit `publish = true`;
# everything else (placeholder, xtask, tests, not-yet-published areas) stays private.
publish = false
repository = "https://github.com/wyager/eo9"
license = "MIT"

# ---------------------------------------------------------------------------------------
# Foundation dependency pins (PLAN.md ground rule 3). This table is the authoritative
# record of the wasmtime / wasm-tools family versions for the whole repository; crates in
# this workspace must take these via `{ workspace = true }`, and the guest/ and kernel/
# workspaces mirror the subset they need (keep the versions in sync with this table).
#
# Version notes (2026-05-25, see plan/01-workspace.md Decisions):
#   * wasm-tools library family 0.250.0 matches the installed wasm-tools CLI 1.250.0.
#   * wasmtime 45.0.0 internally uses the 0.248 family and wac-graph 0.10.0 the 0.247
#     family; those stay private to them and may coexist with our direct 0.250 pins.
# ---------------------------------------------------------------------------------------
[workspace.dependencies]
wasmtime = "45.0.0"
wit-parser = "0.250.0"
wit-component = "0.250.0"
wasm-encoder = "0.250.0"
wasmparser = "0.250.0"
wasm-wave = "0.250.0"
# wasm-tools text-format assembler (same 250 family; already in the lockfile via
# wit-component). Used by the integration-test harness to build executable fixture
# components from hand-written core modules.
wat = "1.250.0"
wac-graph = "0.10.0"
# wit-bindgen is consumed only by the guest workspace (no host crate uses it); the guest
# pin is currently a TEMPORARY GIT PIN to upstream main rev ea49687c8db0c6abb5de9fa3ea3c
# (bundles the 0.249 wasm-tools family) because fs.overlay needs named imports of a
# foreign interface, which no published wit-bindgen release can parse yet (newest, 0.57.1,
# bundles 0.247). Return both this line and guest/Cargo.toml to a crates.io version pin
# with the first release whose bundled wit-parser is >= 0.249. See plan/07-guest-sdk.md
# Decisions 9-10.
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "ea49687c8db0c6abb5de9fa3ea3c7c298587c8f3" }
# blake3 is pinned without default features so no_std crates (eofs-core, later the kernel) can
# use it; the hashing API used by std crates is identical, they just don't get the std-only
# io::Write/Error impls.
blake3 = { version = "1.8.5", default-features = false }
# lz4 block compression for eofs (plan/14-eofs.md). Pure Rust, no_std with default features
# off; the safe encode/decode implementations are kept on.
lz4_flex = { version = "0.13.0", default-features = false, features = ["safe-encode", "safe-decode"] }

# Intra-workspace crates (add new crates/* entries here as areas land). The published
# crates carry a version alongside the path so `cargo publish` can resolve them from
# crates.io while local builds keep using the in-tree sources.
eo9-component = { path = "crates/eo9-component", version = "0.1.0" }
eo9-components = { path = "crates/eo9-components", version = "0.1.0" }
eo9-embed = { path = "crates/eo9-embed", version = "0.1.0" }
eo9-placeholder = { path = "crates/eo9-placeholder" }
eo9-providers-unix = { path = "crates/eo9-providers-unix", version = "0.1.0" }
eo9-runtime = { path = "crates/eo9-runtime", version = "0.1.0" }
eo9-sched = { path = "crates/eo9-sched" }
eo9-store = { path = "crates/eo9-store", version = "0.1.0" }
eofs-core = { path = "crates/eofs-core", version = "0.1.0" }
