# Guest-side workspace: wasm components (guest SDK, stub providers, eosh, examples).
# Built for wasm32-unknown-unknown and componentized with `wasm-tools component new`
# via `cargo xtask build-guest` (see plan/01-workspace.md, Decisions).
[workspace]
resolver = "3"
members = ["eo9-guest", "eosh/*", "examples/*", "coreutils/*", "stubs/*"]
# `fs.overlay` is a committed DRAFT blocked on a toolchain bump (its world imports two
# `eo9:fs/fs` named slots, which wasm-tools 1.250 accepts but the pinned wit-bindgen
# 0.57.1 / wit-parser 0.247 cannot parse). Excluded so the workspace keeps building;
# re-include it once wit-bindgen is bumped. See plan/09-providers-stubs.md.
exclude = ["stubs/fs-overlay"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

# Mirrors the authoritative pin table in the repo-root Cargo.toml — keep versions in sync.
[workspace.dependencies]
# Guest crates are no_std + alloc (plan/07-guest-sdk.md, Decisions): default features are
# disabled to drop `std`; `async` is kept for Component Model future/stream support.
wit-bindgen = { version = "0.57.1", default-features = false, features = [
    "macros",
    "realloc",
    "bitflags",
    "macro-string",
    "async",
] }
# The guest global allocator (the same allocator rustc's std uses on wasm targets).
dlmalloc = { version = "0.2.9", default-features = false, features = ["global"] }

eo9-guest = { path = "eo9-guest" }
