# Guest-side workspace: wasm components (guest SDK, stub providers, eosh, examples).
# Built for wasm32-unknown-unknown and componentized with `wasm-tools component new`
# via `cargo xtask build-guest` (see plan/01-workspace.md, Decisions).
[workspace]
resolver = "3"
members = ["eo9-guest", "eosh/*", "examples/*", "coreutils/*", "stubs/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

# Mirrors the authoritative pin table in the repo-root Cargo.toml — keep versions in sync.
[workspace.dependencies]
# Guest crates are no_std + alloc (plan/07-guest-sdk.md, Decisions): default features are
# disabled to drop `std`; `async` is kept for Component Model future/stream support.
#
# TEMPORARY GIT PIN (plan/07-guest-sdk.md, Decisions 9-10): the fs.overlay world needs
# named imports of a foreign interface (`import upper: eo9:fs/fs`), which requires a
# wit-parser >= 0.249 inside the bindings generator; the newest published wit-bindgen
# (0.57.1) still bundles 0.247, so we pin a specific upstream main revision (bundles the
# 0.249 family). Return to a crates.io version pin with the first published release
# whose bundled wit-parser is >= 0.249.
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "ea49687c8db0c6abb5de9fa3ea3c7c298587c8f3", default-features = false, features = [
    "macros",
    "realloc",
    "bitflags",
    "macro-string",
    "async",
] }
# The guest global allocator (the same allocator rustc's std uses on wasm targets).
dlmalloc = { version = "0.2.9", default-features = false, features = ["global"] }

eo9-guest = { path = "eo9-guest" }
# The eofs engine (no_std + alloc, target-independent — see plan/14-eofs.md): the same
# crate the host tests and the kernel use, consumed here by the fs.eofs provider. Its
# own `workspace = true` pins (blake3, lz4_flex) resolve against the repo-root table.
eofs-core = { path = "../crates/eofs-core" }
