# Bare-metal workspace: the no_std (+ alloc) kernel core and per-arch ports (area 12).
# Built with explicit --target flags via xtask (`cargo xtask build-kernel <arch>`); plain
# `cargo test` here runs on the host triple, where the kernel crate compiles to a stub.
[workspace]
resolver = "3"
members = ["eo9-kernel"]
# `vendor/` holds the locally patched copy of the wasmtime crate (see vendor/README.md);
# it is a [patch] source, not a workspace member.
exclude = ["vendor"]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

# Dependency pins for kernel crates. Keep any versions shared with the host side in sync
# with the authoritative table in the repo-root Cargo.toml (wasmtime is pinned to the same
# 45.0.0 there; here it is taken without default features because the kernel is no_std).
[workspace.dependencies]
wasmtime = { version = "45.0.0", default-features = false }
# Small, well-known free-list allocator behind `#[global_allocator]` (plan/12-kernel.md
# Decisions). Pulls only `lock_api`/`spinning_top`, which is fine on a single core with
# interrupts masked.
linked_list_allocator = "0.10.5"

# The kernel needs wasmtime's component-model-async host machinery, whose cargo feature
# requires `std` upstream. `vendor/wasmtime` is the crates.io 45.0.0 source with a minimal,
# upstream-shaped relaxation (alloc-only concurrent machinery); every change is listed in
# vendor/README.md and plan/12-kernel.md Decisions. This patch applies to the kernel
# workspace only — the host workspaces keep using the unmodified registry crate.
[patch.crates-io]
wasmtime = { path = "vendor/wasmtime" }
# On-target codegen (plan/12 Decisions 26–28): the kernel compiles components on the
# machine via Cranelift, behind the off-by-default `wasm-codegen` feature. That needs the
# wasmtime compile layers to build no_std+alloc; these two vendored crates carry the
# minimal relaxation (see vendor/README.md). They are kernel-workspace-only; the host and
# guest workspaces keep the registry crates. wasmtime-environ is pulled by every wasmtime
# build but is byte-identical to the registry except under the `compile` feature; the
# cranelift crate is only compiled when `wasm-codegen` (→ wasmtime `cranelift`) is on.
wasmtime-environ = { path = "vendor/wasmtime-environ" }
wasmtime-internal-cranelift = { path = "vendor/wasmtime-cranelift" }
# cranelift-frontend and wasmtime-internal-unwinder hardcode `cranelift-codegen/std` in
# their dependency feature lists, which (via feature unification) forces std on the whole
# codegen graph. Vendored only to change those dep lines to the `core` profile (D28).
cranelift-frontend = { path = "vendor/cranelift-frontend" }
# cranelift-codegen itself is no_std (its `core` profile), but its riscv64 backend uses the
# std-only `f64::powi` in four constant comparisons, which breaks the riscv64gc on-target
# codegen build. Vendored only to spell those four constants as exact divisions
# (src/isa/riscv64/inst/args.rs); everything else is byte-identical to the registry crate.
cranelift-codegen = { path = "vendor/cranelift-codegen" }
wasmtime-internal-unwinder = { path = "vendor/wasmtime-unwinder" }
# The component-algebra closure (plan/12 Decisions 30–35): eo9-component (the kernel's
# `eo9:exec` compose/$/&/only/configure surface, behind `wasm-codegen`) pulls these four
# crates, which are std-only (or std-gated) in their published form. The vendored copies are
# de-std'd (no_std + alloc); wac-types/wac-graph stay on the 0.247 wasmparser family to avoid
# a risky 0.250 decoder port. Kernel-workspace-only; host/guest keep the registry crates.
wit-parser = { path = "vendor/wit-parser" }
wac-types = { path = "vendor/wac-types" }
wac-graph = { path = "vendor/wac-graph" }
wit-component = { path = "vendor/wit-component" }
# wasm-wave is already no_std; the vendored copy only stops its `wit` feature from
# force-enabling `std` (eo9-component's `configure` needs `value::resolve_wit_type`, which
# lives behind `wit`). See vendor/README.md.
wasm-wave = { path = "vendor/wasm-wave" }
