[package]
name = "xtask"
description = "Build orchestration across the host, guest, and kernel workspaces. Run `cargo xtask help`."
version.workspace = true
edition.workspace = true
publish.workspace = true

# Deliberately dependency-free (PLAN.md ground rule 3): plain std argument parsing and
# std::process only.
[dependencies]
