[package]
name = "xtask"
description = "Build orchestration across the host, guest, and kernel workspaces. Run `cargo xtask help`."
version.workspace = true
edition.workspace = true
publish.workspace = true

# Kept close to dependency-free (PLAN.md ground rule 3): plain std argument parsing and
# std::process, plus exactly what `build-kernel` needs to precompile the bare-metal seed
# component — `wat` to assemble kernel/seed/hello.wat and `wasmtime` (the pinned foundation
# dependency, already built for this workspace via eo9-runtime) to precompile it for the
# aarch64-unknown-none target — and `eo9-component` (a workspace crate) to describe each
# store component so the kernel's read-only store image carries its metadata.
[dependencies]
eo9-component = { path = "../crates/eo9-component" }
wasmtime = { workspace = true, features = ["cranelift", "component-model"] }
wat = { workspace = true }

[features]
# Off by default. Links every Cranelift backend into the host wasmtime so xtask can
# pre-compile kernel-store artifacts for non-host bare-metal targets (riscv64).
# `cargo xtask build-kernel riscv64` re-runs itself with this feature automatically;
# nothing else needs it, so plain xtask builds stay lean.
kernel-cross-aot = ["wasmtime/all-arch"]
