# The component algebra (SPEC.md "Execution APIs" -> component-algebra): pure,
# unprivileged value manipulation on program bytecode. Math on bytes -- no execution,
# no I/O policy. Mirrors the WIT interface in wit/exec/exec.wit so the runtime (area 04)
# can expose it to guests with a thin shim.
[package]
name = "eo9-component"
description = "Eo9 component algebra: load/save/describe, $ (compose), & (extend), only (restrict), rename"
license = "MIT"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
wasmparser = { workspace = true }
# The `wasmparser` feature provides the parse-type -> encode-type conversions used by
# `rename`'s section rewriting.
wasm-encoder = { workspace = true, features = ["wasmparser"] }
wit-parser = { workspace = true }
wit-component = { workspace = true }
wac-graph = { workspace = true }
# WAVE is the canonical value encoding for invocations (SPEC "Arguments and outcomes");
# `configure` parses compose-time constants with it against the config signature.
wasm-wave = { workspace = true }

[features]
# The default `std` feature keeps every host build byte-identical to before. With `std`
# off, the crate is `#![no_std]` + `alloc` (its own source uses only core/alloc), so the
# bare-metal kernel can run the algebra on-target. `std` forwards to the `std` feature of
# the dependencies that gate it. The dependencies that are std-only in their published
# form (`wac-graph`, `wit-component`, `wac-types`) and the std-gated feature paths of
# `wit-parser`/`wasm-wave` are swapped for no_std copies by the kernel workspace's
# `[patch.crates-io]` (see kernel/vendor/); turning those into clean no_std builds is the
# remaining work of the algebra fork — see plan/12-kernel.md Decision 31.
default = ["std"]
std = [
    "wasmparser/std",
    "wasm-encoder/std",
    "wit-parser/std",
    "wasm-wave/std",
]

[dev-dependencies]
# Test fixtures are tiny components generated in-process from WIT text: a dummy core
# module (`dummy-module` feature) is wrapped into a component with wit-component, so no
# prebuilt guest artifacts are needed (area 07 is built in parallel and is not a
# dependency of this crate).
wit-component = { workspace = true, features = ["dummy-module"] }
