# eofs-core is the target-independent heart of Eo9's native filesystem (plan/14-eofs.md,
# SPEC.md "Filesystem API"): the on-disk format plus a copy-on-write read/write engine over
# an abstract `BlockDevice` trait. It is `no_std` + `alloc` so the same code serves host
# tests, the guest provider component, and the bare-metal kernel.
#
# no_std claim is kept honest with:   cargo check -p eofs-core --target aarch64-unknown-none
[package]
name = "eofs-core"
description = "Eo9's native filesystem (eofs): copy-on-write, Merkle-hashed, compressed on-disk format and engine over an abstract block device."
license = "MIT"
version.workspace = true
edition.workspace = true
# Published: the `eo9` binary depends on it for `mkfs.eofs` (formatting disk images), so
# it has to live on crates.io alongside the rest of the publish chain.
publish = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
lz4_flex = { workspace = true }

# Bare-metal targets have no C toolchain headers, so skip blake3's C NEON kernels there and
# use its portable Rust implementation. Hosted targets keep their SIMD paths.
[target.'cfg(target_os = "none")'.dependencies]
blake3 = { workspace = true, features = ["no_neon"] }

[dev-dependencies]
blake3 = { workspace = true }
