[package]
name = "eo9-guest-placeholder"
description = "Placeholder guest component proving out the wit-bindgen + wasm-tools build flow; replaced as areas 07/09/10 land."
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
# A core wasm module that `wasm-tools component new` turns into a component.
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
