# The Eo9 bare-metal kernel (area 12: aarch64 / QEMU `virt` only so far).
#
# Build and run it via xtask — `cargo xtask build-kernel aarch64` and `cargo xtask qemu
# aarch64` — which supply the target, the linker script, and (for the `wasm-*` features)
# the host-precompiled artifacts. A plain host build (as done by `cargo test` in this
# workspace) compiles to a stub binary so the workspace stays testable on the host triple.
[package]
name = "eo9-kernel"
description = "Eo9 bare-metal kernel: boot, serial, heap, timer, kernel-side eo9 root providers, and a wasmtime-based runner for precompiled components on QEMU aarch64 virt."
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
# Embed the host-precompiled seed wasm component (built by `cargo xtask build-kernel
# aarch64`, passed in via the EO9_SEED_CWASM environment variable) and run it at boot.
wasm-seed = ["dep:wasmtime"]
# Embed the host-precompiled eo9-example-hello program (EO9_HELLO_CWASM) and run it at
# boot against the kernel's root providers: text -> PL011 serial, time -> generic timer +
# PL031 RTC, entropy -> counter-seeded splitmix64.
wasm-hello = ["dep:wasmtime"]
# Embed the host-precompiled async artifacts (EO9_SLEEPY_CWASM — the kernel-local async
# canary that awaits `eo9:time/time.sleep` — and EO9_ENTROPY_SEEDED_CWASM — the unmodified
# `entropy.seeded` stub from the guest workspace, whose `configure` export uses the async
# canonical ABI) and run them at boot through the component-model-async machinery.
wasm-async = ["dep:wasmtime"]
# Embed the read-only store image assembled by xtask (EO9_STORE_IMAGE: shell-named
# components plus their host-AOT artifacts) and the headless runner that the kernel
# command line's `program=<name> [arg=value …]` selects from.
wasm-store = ["dep:wasmtime"]

# These dependencies are only used by the real bare-metal build; host-triple builds (unit
# tests, `cargo check` without --target) compile the stub entry point and need neither.
# `async` + `component-model-async` come from the patched vendor/wasmtime copy (the
# upstream feature graph requires `std` for component-model-async; see vendor/README.md).
[target.'cfg(target_os = "none")'.dependencies]
linked_list_allocator = { workspace = true }
wasmtime = { workspace = true, optional = true, features = [
    "runtime",
    "component-model",
    "async",
    "component-model-async",
] }
